# volatility-surface-explorer

./: Cargo.toml  README.md  index.html  main.js  styles.css
benches/: benchmark.rs
data/: aapl.json  spy.json
js/: OrbitControls.js  calc.js  dat.gui.min.0.7.2.js  data.js  delaunator.3.0.2.js  modal.js  parse.js  perlin.js  plot.js
pkg/: package.json  simd_vol.d.ts  simd_vol.js  simd_vol_bg.wasm  simd_vol_bg.wasm.d.ts
src/: bs.rs  bs32x8.rs  consts.rs  lib.rs  main.rs  read_hist.rs  vol32x8.rs
