[package]
name = "simd_vol"
version = "0.1.0"
edition = "2021"

# Comment out if you want benchmark to run/simd_vol importable into other files
# [lib]
# crate-type = ["cdylib"]

[dependencies]
wide = "0.7.13"
implied-vol = "0.2"
bytemuck = "1.14.1"
rayon = "1.8.1"
wasm-bindgen = "0.2.90"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
